--- a/E2E.UWP/MainPage.xaml
+++ b/E2E.UWP/MainPage.xaml
@@ -1,25 +1,54 @@
-﻿<Page
-    x:Class="E2E.UWP.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:E2E.UWP"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="E2E.UWP.MainPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:E2E.UWP"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <TextBlock Name="debugOutput" />
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"  />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <CaptureElement Name="preview" Stretch="Uniform"/>
-            <Image Name="processPreview" Stretch="Uniform" Grid.Row="1" />
+            <CaptureElement Name="preview"
+                            Stretch="Uniform" />
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid Name="topGrid"
+                      Grid.Column="1"
+                      Background="Green" />
+                <Grid Name="leftGrid"
+                      Grid.Row="1"
+                      Background="Green" />
+                <Grid Name="middleGrid"
+                      Grid.Column="1"
+                      Grid.Row="1"
+                      Background="Green" />
+                <Grid Name="rightGrid"
+                      Grid.Column="2"
+                      Grid.Row="1"
+                      Background="Green" />
+                <Grid Name="bottomGrid"
+                      Grid.Column="1"
+                      Grid.Row="2"
+                      Background="Green" />
+            </Grid>
         </Grid>
     </Grid>
 </Page>
