--- a/E2E.UWP/App.xaml
+++ b/E2E.UWP/App.xaml
@@ -2,7 +2,6 @@
     x:Class="E2E.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:E2E.UWP"
-    RequestedTheme="Light">
+    xmlns:local="using:E2E.UWP">
 
 </Application>
