--- a/E2E.UWP/MainPage.xaml
+++ b/E2E.UWP/MainPage.xaml
@@ -8,17 +8,10 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
-        <TextBlock HorizontalAlignment="Left"
-                   VerticalAlignment="Top"
-                   Margin="8"
-                   Foreground="Green">
-            <Run Text="id: " />
-            <Run Text="{Binding UserId}" />
-        </TextBlock>
-        <Grid Grid.Column="1">
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
@@ -32,13 +25,61 @@
                     </CaptureElement.RenderTransform>
                 </CaptureElement>
 
+                <!-- Camera grid -->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="1" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="2*" />
+                        <RowDefinition Height="1" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="1" />
+                        <RowDefinition Height="3*" />
+                    </Grid.RowDefinitions>
+                    <Grid Background="Gray"
+                          Grid.Column="1"
+                          Grid.RowSpan="5" />
+                    <Grid Background="Gray"
+                          Grid.Row="1"
+                          Grid.ColumnSpan="3" />
+                    <Grid Background="Gray"
+                          Grid.Row="3"
+                          Grid.ColumnSpan="3" />
+
+                    <!-- Camera legend -->
+                    <!--
+                    <TextBlock Text="eye"
+                               FontSize="12"
+                               Grid.Row="2"
+                               VerticalAlignment="Center"
+                               Margin="-20,4,4,4" />
+                    -->
+
+                    <TextBlock Text="left"
+                               FontSize="12"
+                               Grid.Row="4"
+                               VerticalAlignment="Bottom"
+                               Margin="4" />
+
+                    <TextBlock Text="right"
+                               FontSize="12"
+                               Grid.Row="4"
+                               Grid.Column="2"
+                               VerticalAlignment="Bottom"
+                               HorizontalAlignment="Right"
+                               Margin="4" />
+                </Grid>
+
                 <TextBlock Text="{Binding CameraStatus}"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Top"
                            Margin="8"
                            Foreground="Green" />
             </Grid>
-            
+
             <Grid Grid.Row="1">
                 <Canvas Name="positionCanvas" />
                 <Rectangle StrokeThickness="1"
@@ -81,5 +122,66 @@
                 </TextBlock>
             </Grid>
         </Grid>
+        
+        <Grid Grid.Column="1">
+            <!-- userId -->
+            <TextBlock HorizontalAlignment="Left"
+                       VerticalAlignment="Top"
+                       Foreground="Green">
+            <Run Text="id: " />
+            <Run Text="{Binding UserId}" />
+            </TextBlock>
+
+            <Button Content="Reset"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Name="ResetBtn"
+                    Grid.ColumnSpan="2"
+                    Margin="371,0,0,0"
+                    Click="ResetBtn_Click" />
+
+            <!-- Main frame grid -->
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="0.1*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="0.1*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.1*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="0.1*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="2"
+                           Grid.Row="1"
+                           Margin="8"
+                           FontSize="20"
+                           Text="{Binding TopCount}"
+                           HorizontalAlignment="Center" />
+                <TextBlock Grid.Row="2"
+                           Grid.Column="1"
+                           Margin="8"
+                           FontSize="20"
+                           Text="{Binding LeftCount}"
+                           VerticalAlignment="Center" />
+                <TextBlock Grid.Column="2"
+                           Grid.Row="3"
+                           Margin="8"
+                           FontSize="20"
+                           Text="{Binding BottomCount}"
+                           HorizontalAlignment="Center" />
+                <TextBlock Grid.Column="3"
+                           Grid.Row="2"
+                           Margin="8"
+                           FontSize="20"
+                           Text="{Binding RightCount}"
+                           VerticalAlignment="Center" />
+            </Grid>
+        </Grid>
+        
     </Grid>
 </Page>
