--- a/E2E.UWP/Pages/KeyboardPage.xaml
+++ b/E2E.UWP/Pages/KeyboardPage.xaml
@@ -1,11 +1,10 @@
-﻿<Page
-    x:Class="E2E.UWP.Pages.KeyboardPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:E2E.UWP.Pages"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="E2E.UWP.Pages.KeyboardPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:E2E.UWP.Pages"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid Margin="16">
@@ -14,17 +13,23 @@
                 <RowDefinition Height="50" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <TextBox PlaceholderText="Look left / right to choose&#10;look top to select&#10;look bottom to apply suggestion"
+            <TextBox PlaceholderText="Look left / right to select&#10;Look top to select&#10;Look bottom to apply suggestion"
                      Text="{Binding InputText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      BorderThickness="0"
-                     FontSize="24"/>
-            
-            <GridView Grid.Row="1" 
+                     FontSize="24" />
+
+            <GridView Grid.Row="1"
                       ItemsSource="{Binding Selections}"
                       SelectedIndex="{Binding SelectionIndex}">
+                <GridView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <ItemsWrapGrid MaximumRowsOrColumns="99" />
+                    </ItemsPanelTemplate>
+                </GridView.ItemsPanel>
                 <GridView.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock FontSize="24" Text="{Binding}" />
+                        <TextBlock FontSize="24"
+                                   Text="{Binding}" />
                     </DataTemplate>
                 </GridView.ItemTemplate>
             </GridView>
