few logic fixes

--- a/E2E.UWP/Pages/KeyboardPage.xaml
+++ b/E2E.UWP/Pages/KeyboardPage.xaml
@@ -19,6 +19,7 @@
                      FontSize="24" />
 
             <GridView Grid.Row="1"
+                      Name="KeyGridView"
                       ItemsSource="{Binding Selections}"
                       SelectedIndex="{Binding SelectionIndex}">
                 <GridView.ItemsPanel>
