--- a/E2E.UWP/MainPage.xaml
+++ b/E2E.UWP/MainPage.xaml
@@ -14,6 +14,7 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid>
@@ -25,62 +26,18 @@
                     </CaptureElement.RenderTransform>
                 </CaptureElement>
 
-                <!-- Camera grid -->
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="1" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="2*" />
-                        <RowDefinition Height="1" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="1" />
-                        <RowDefinition Height="3*" />
-                    </Grid.RowDefinitions>
-                    <Grid Background="Gray"
-                          Grid.Column="1"
-                          Grid.RowSpan="5" />
-                    <Grid Background="Gray"
-                          Grid.Row="1"
-                          Grid.ColumnSpan="3" />
-                    <Grid Background="Gray"
-                          Grid.Row="3"
-                          Grid.ColumnSpan="3" />
-
-                    <!-- Camera legend -->
-                    <!--
-                    <TextBlock Text="eye"
-                               FontSize="12"
-                               Grid.Row="2"
-                               VerticalAlignment="Center"
-                               Margin="-20,4,4,4" />
-                    -->
-
-                    <TextBlock Text="left"
-                               FontSize="12"
-                               Grid.Row="4"
-                               VerticalAlignment="Bottom"
-                               Margin="4" />
-
-                    <TextBlock Text="right"
-                               FontSize="12"
-                               Grid.Row="4"
-                               Grid.Column="2"
-                               VerticalAlignment="Bottom"
-                               HorizontalAlignment="Right"
-                               Margin="4" />
-                </Grid>
-
                 <TextBlock Text="{Binding CameraStatus}"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Top"
                            Margin="8"
                            Foreground="Green" />
             </Grid>
-
-            <Grid Grid.Row="1">
+            <Button Grid.Row="1"
+                    Content="Calibrate (Look center)"
+                    HorizontalAlignment="Stretch"
+                    Name="calibrateBtn"
+                    Click="calibrateBtn_Click"/>
+            <Grid Grid.Row="2">
                 <Canvas Name="positionCanvas" />
                 <Rectangle StrokeThickness="1"
                            Stroke="Gray" />
