--- a/E2E.UWP/MainPage.xaml
+++ b/E2E.UWP/MainPage.xaml
@@ -7,10 +7,13 @@
       mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    
+        <Frame Name="frame"
+               Grid.Column="1" />
         <Grid Height="200"
               Width="200"
               Opacity="0.5">
-            <Grid>
+            <Grid Opacity="0.2">
                 <CaptureElement Name="preview"
                                 Stretch="Uniform"
                                 RenderTransformOrigin="0.5,0.5">
@@ -74,7 +77,8 @@
             </Grid>
         </Grid>
 
-        <Frame Name="frame"
-               Grid.Column="1" />
+        <Button Content="Nursing"
+                VerticalAlignment="Top"
+                Click="Button_Click" />
     </Grid>
 </Page>
